<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lil Muse</string>
    <string name="intro_string">Find the right Instrument!</string>
    <string name="action_settings">Settings</string>
    <string name="start_String">Click to Start!</string>
    <string name="title_activity_instruments">InstrumentsActivity</string>

    <string name="backButton">Back</string>

    <string name="Brass_Instruments">Brass Instruments</string>
    <string name="WoodWind_Instruments">Woodwind Instruments</string>
    <string name="Percussion_Instruments">Percussion Instruments</string>
    <string name="String_instruments">String Instruments</string>
    <string name="title_activity_brass">BrassActivity</string>

    //brass instruments
    <string name="trumpet">Trumpet</string>
    <string name="french_horn">French Horn</string>
    <string name="tuba">Tuba</string>
    <string name="baritone">Baritone</string>
    <string name="trombone">Trombone</string>

    //woodwind instruments
    <string name="clarinet">Clarinet</string>
    <string name="flute">Flute</string>
    <string name="saxophone">saxophone</string>
    <string name="oboe">Oboe</string>
    <string name="piccalo">Piccalo</string>

    //percussion instruments
    <string name="xylophone">Xylophone</string>
    <string name="drums">Drums</string>

    //String instruments
    <string name="violin">Violin</string>
    <string name="cello">Cello</string>
    <string name="bass">Bass</string>
    <string name="viola">Viola</string>
    <string name="guitar">guitar</string>
    <string name="title_activity_woodwind">WoodwindActivity</string>

    <string name="title_activity_percussion">PercussionActivity</string>
</resources>
