<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/abc_list_longpressed_holo">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="back"
        android:id="@+id/backToInstruments"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trumpet"
        android:id="@+id/trumpet_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_horn"
        android:id="@+id/Frenchhorn_btn"
        android:layout_above="@+id/tuba_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuba"
        android:id="@+id/tuba_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baritone"
        android:id="@+id/Baritone_btn"
        android:layout_above="@+id/backToInstruments"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trombone"
        android:id="@+id/trombone_btn"
        android:layout_below="@+id/Baritone_btn"
        android:layout_alignLeft="@+id/Baritone_btn"
        android:layout_alignStart="@+id/Baritone_btn" />

</RelativeLayout>
